--- a/src/App.scss
+++ b/src/App.scss
@@ -30,3 +30,34 @@ a {
 a:hover {
   color: black;
 }
+
+#question-container {
+  margin: 0 20px;
+  #question-number {
+    margin: 30px 0px;
+    color: var(--unnamed-color-b088f9);
+    text-align: left;
+    font: normal normal bold 30px/32px Helvetica75;
+    letter-spacing: 0px;
+    color: #b088f9;
+  }
+  #question {
+    font: normal normal 800 20px/27px Noto Sans Kannada;
+    margin-bottom: 30px;
+  }
+  .answer-button {
+    margin: 0 auto;
+    background: #f7f7f7 0% 0% no-repeat padding-box;
+    width: 320px;
+    height: 80px;
+    border-radius: 12px;
+    font: normal normal 800 16px/22px Noto Sans Kannada;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    span {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  }
+}
