--- a/src/App.scss
+++ b/src/App.scss
@@ -11,18 +11,22 @@
   align-items: center;
   justify-content: center;
 }
-
-.content {
-  width: 100%;
-  height: 90%;
-  overflow: hidden;
-  #main-container {
+@media screen and (max-width: 400px) {
+  .content {
     width: 100%;
-    height: 10%;
-    font-weight: 600;
+    height: 90%;
+    overflow: hidden;
   }
 }
 
+@media screen and (min-width: 401px) {
+  .content {
+    margin: 0 auto;
+    width: 400px;
+    height: 90%;
+    overflow: hidden;
+  }
+}
 a {
   color: black;
   text-decoration: none;
@@ -55,9 +59,6 @@ a:hover {
     margin-bottom: 20px;
     display: flex;
     align-items: center;
-    span {
-      padding-left: 10px;
-      padding-right: 10px;
-    }
+    cursor: pointer;
   }
 }
