--- a/src/App.scss
+++ b/src/App.scss
@@ -4,12 +4,14 @@
   margin: 0 auto;
 }
 
-#main-title {
-  margin: 0;
-  height: 8%;
+#logo {
+  margin-top: 25px;
   display: flex;
-  align-items: center;
   justify-content: center;
+  img {
+    width: 100px;
+    height: auto;
+  }
 }
 @media screen and (max-width: 400px) {
   .content {
@@ -34,21 +36,24 @@ a:hover {
 }
 
 #fake-div {
-  height: 100px;
+  height: 80px;
 }
 
 #question-container {
   margin: 0 20px;
+  line-height: 145%;
   #question-number {
     margin: 30px 0px;
     color: var(--unnamed-color-b088f9);
     text-align: left;
-    font: normal normal bold 30px/32px Helvetica75;
+    font-family: "Nanum Gothic", sans-serif;
     letter-spacing: 0px;
+    font-weight: 900;
+    font-size: 1.5rem;
     color: #b088f9;
   }
   #question {
-    font: normal normal 800 20px/27px Noto Sans Kannada;
+    font-family: "Nanum Gothic", sans-serif;
     margin-bottom: 20px;
   }
   .answer-button {
@@ -57,7 +62,7 @@ a:hover {
     width: 320px;
     height: 80px;
     border-radius: 12px;
-    font: normal normal 800 16px/22px Noto Sans Kannada;
+    font-family: "Nanum Gothic", sans-serif;
     margin-bottom: 20px;
     cursor: pointer;
     span {
@@ -80,7 +85,7 @@ a:hover {
       width: 120px;
       height: 120px;
       border-radius: 12px;
-      font: normal normal 800 16px/22px Noto Sans Kannada;
+      font-family: "Nanum Gothic", sans-serif;
       margin-bottom: 20px;
       cursor: pointer;
       span {
@@ -104,6 +109,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-family: "Nanum Gothic", sans-serif;
   #hbti-question {
     text-align: center;
     font-size: 1.2rem;
@@ -128,12 +134,16 @@ a:hover {
   #hbti-image {
     max-width: 300px;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 15px;
     border-radius: 10px;
+    box-shadow: 0px 6px 6px #00000029;
   }
   #hbti-description {
-    font-weight: 600;
+    font-weight: 500;
     margin-bottom: 30px;
+    letter-spacing: 1px;
+    line-height: 145%;
   }
   .hbti-exercise {
     font-weight: 600;
@@ -148,9 +158,10 @@ a:hover {
   }
   #helchang-score {
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 900;
     margin-bottom: 30px;
+    color: rgb(98, 28, 148);
   }
   #helchang-type {
     text-align: center;
@@ -161,7 +172,7 @@ a:hover {
   }
   #helchang-character {
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     font-weight: 800;
     margin-bottom: 20px;
     color: #b088f9;
@@ -171,10 +182,13 @@ a:hover {
     margin: 0 auto;
     margin-bottom: 20px;
     border-radius: 10px;
+    box-shadow: 0px 6px 6px #00000029;
   }
   #helchang-description {
-    font-weight: 600;
+    font-weight: 500;
     margin-bottom: 30px;
+    letter-spacing: 1px;
+    line-height: 145%;
   }
   .home-button {
     margin: 0 auto;
