--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -4,6 +4,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: "Nanum Gothic", sans-serif;
+  #home-title {
+    font-weight: 800;
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+    color: rgb(98, 28, 148);
+  }
+  #home-subtitle {
+    font-weight: 600;
+    font-size: 1.4rem;
+  }
   #home-main-image {
     width: 258px;
     margin: 40px;
