--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,22 @@
-.main-container {
-  width: 100%;
-  height: 100vh;
-  margin: 0 auto;
-}
-
 #logo {
+  margin: 0 auto;
   margin-top: 25px;
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100px;
   img {
     width: 100px;
     height: auto;
   }
 }
 @media screen and (max-width: 400px) {
+  #main-container {
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+  }
+
   .content {
     width: 100%;
     height: 85%;
@@ -21,6 +24,12 @@
 }
 
 @media screen and (min-width: 401px) {
+  #main-container {
+    width: 400px;
+    height: 100vh;
+    margin: 0 auto;
+  }
+
   .content {
     margin: 0 auto;
     width: 400px;
@@ -110,6 +119,12 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   font-family: "Nanum Gothic", sans-serif;
+  #result-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 70px;
+  }
   #hbti-question {
     text-align: center;
     font-size: 1.2rem;
@@ -201,6 +216,7 @@ a:hover {
     border-radius: 43px;
     border-width: 2px;
     border-color: #b088f9;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
