fixed: mobile viewport then

--- a/src/App.scss
+++ b/src/App.scss
@@ -150,12 +150,13 @@ a:hover {
     max-width: 300px;
     margin: 0 auto;
     margin-top: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     border-radius: 10px;
     box-shadow: 0px 6px 6px #00000029;
   }
   #hbti-description {
     font-weight: 500;
+    margin-top: 20px;
     margin-bottom: 30px;
     letter-spacing: 1px;
     line-height: 145%;
