--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 #logo {
   margin: 0 auto;
-  margin-top: 25px;
+  padding-top: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,6 +61,22 @@ a:hover {
     font-size: 1.5rem;
     color: #b088f9;
   }
+  #previous-button {
+    margin: 30px 0px;
+    color: var(--unnamed-color-b088f9);
+    text-align: left;
+    font-family: "Nanum Gothic", sans-serif;
+    letter-spacing: 0px;
+    font-weight: 700;
+    font-size: 1.4rem;
+    cursor: pointer;
+    color: #b088f9;
+  }
+  #question-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
   #question {
     font-family: "Nanum Gothic", sans-serif;
     margin-bottom: 20px;
@@ -113,6 +129,7 @@ a:hover {
 }
 
 #result-container {
+  margin-top: 25px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -178,6 +195,9 @@ a:hover {
     font-weight: 900;
     margin-bottom: 30px;
     color: rgb(98, 28, 148);
+    span {
+      font-size: 1.8rem;
+    }
   }
   #helchang-type {
     text-align: center;
