--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 @media screen and (max-width: 400px) {
   body {
-    margin: 0;
+    margin: 0 auto;
     font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  body {
+    margin: 0 auto;
+    font-size: 18px;
   }
 }
