--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -16,8 +16,12 @@
     font-size: 1.4rem;
   }
   #home-main-image {
-    width: 258px;
-    margin: 40px;
+    max-width: 300px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    box-shadow: 0px 6px 6px #00000029;
   }
   .home-button {
     margin-bottom: 20px;
