--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,7 @@
   .content {
     width: 100%;
     height: 85%;
+    display: flex;
   }
 }
 
@@ -34,6 +35,7 @@
     margin: 0 auto;
     width: 400px;
     height: 85%;
+    display: flex;
   }
 }
 a {
@@ -44,8 +46,15 @@ a:hover {
   color: black;
 }
 
-#fake-div {
-  height: 80px;
+#common-test-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#common-result-container {
+  margin: auto auto;
 }
 
 #question-container {
@@ -80,6 +89,25 @@ a:hover {
   #question {
     font-family: "Nanum Gothic", sans-serif;
     margin-bottom: 20px;
+  }
+  #total-percentage-bar {
+    background: #f7f7f7 0% 0% no-repeat padding-box;
+    margin: 0 auto;
+    margin-top: 75px;
+    border-radius: 30px;
+    width: 350px;
+    height: 20px;
+    line-height: 1.8;
+    #current-percentage-bar {
+      z-index: 9999;
+      background: #b48ef9 0% 0% no-repeat padding-box;
+      height: 20px;
+      border-radius: 30px;
+      font-size: 11px;
+      color: white;
+      text-align: right;
+      padding: 0 3px;
+    }
   }
   .answer-button {
     margin: 0 auto;
