--- a/src/components/CommonQuestion.scss
+++ b/src/components/CommonQuestion.scss
@@ -1,5 +1,6 @@
 #common-question-container {
   height: 100%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
