--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   body {
     margin: 0 auto;
     font-size: 16px;
+    font-family: "Nanum Gothic", sans-serif;
   }
 }
 
@@ -9,5 +10,6 @@
   body {
     margin: 0 auto;
     font-size: 18px;
+    font-family: "Nanum Gothic", sans-serif;
   }
 }
