--- a/src/components/CommonQuestion.scss
+++ b/src/components/CommonQuestion.scss
@@ -44,6 +44,8 @@
     height: 1.8rem;
     border-color: #b088f9;
     border-radius: 5px;
+    text-align: center;
+    font-size: 1.2rem;
   }
   #next-button {
     margin-top: 70px;
