--- a/src/App.scss
+++ b/src/App.scss
@@ -96,6 +96,7 @@ a:hover {
     color: #b088f9;
   }
   #question-header {
+    height: 90px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -103,6 +104,7 @@ a:hover {
   #question {
     font-family: "Nanum Gothic", sans-serif;
     margin-bottom: 20px;
+    height: 120px;
   }
   #total-percentage-bar {
     background: #f7f7f7 0% 0% no-repeat padding-box;
