--- a/src/App.scss
+++ b/src/App.scss
@@ -86,6 +86,8 @@ a:hover {
   }
   #previous-button {
     margin: 30px 0px;
+    display: flex;
+    justify-content: flex-end;
     color: var(--unnamed-color-b088f9);
     text-align: left;
     font-family: "Nanum Gothic", sans-serif;
