style: font change to Noto Sans

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   body {
     margin: 0 auto;
     font-size: 16px;
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: "Noto Sans KR", sans-serif;
   }
 }
 
@@ -10,6 +10,6 @@
   body {
     margin: 0 auto;
     font-size: 18px;
-    font-family: "Nanum Gothic", sans-serif;
+    font-family: "Noto Sans KR", sans-serif;
   }
 }
