style: home title margin changed

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -8,12 +8,14 @@
   #home-title {
     font-weight: 800;
     font-size: 1.8rem;
-    margin-bottom: 10px;
     color: rgb(98, 28, 148);
+    margin-bottom: 10px;
   }
   #home-subtitle {
     font-weight: 600;
     font-size: 1.4rem;
+    margin-top: 0px;
+    margin-bottom: 20px;
   }
   #home-main-image {
     max-width: 300px;
